GitOps/clusters/cyberhawk-talos-k8s/3-apps/geopulse/21-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geopulse-backend
spec:
  selector:
    app: geopulse-backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
