GitOps/clusters/cyberhawk-talos-k8s/3-apps/geopulse/31-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geopulse-frontend
spec:
  selector:
    app: geopulse-frontend
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
