GitOps/clusters/cyberhawk-talos-k8s/3-apps/geopulse/40-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: geopulse
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: kube-system
  hostnames:
    - geopulse.cyberhawk.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: geopulse-frontend
          port: 80
